--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0">
     <title>Designco</title>
-    <link rel="stylesheet" href="/screen.css">
+    <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Hello, World!</h1>
+    <div id="wrapper">
+    <div id="menu">
+      <ul>
+          <li><img src="images/designco-logo.png" id="logo">
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
+    <div id="info">
+      <h1>The Details Matter</h1>
+      <p>We're making beautiful websites layouts</p>
+      <p>using modern methods.</p>
+    </div>
+    <div id="images">
+      <img src="images/random01.jpg">
+      <img src="images/random02.jpg">
+      <img src="images/random03.png">
+    </div>
+    <div id="blurbs">
+    <p>What's New. We always have new projects that clients hire us for. View recent projects.</p>
+    <p>Modern layouts
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
+    <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla.</p>
+    <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>    
+    </div>
   </body>
 </html>
